--- a/scss/partials/_layout.scss
+++ b/scss/partials/_layout.scss
@@ -89,6 +89,7 @@ h6,
 }
 .over{
     z-index:1;
+    position: relative;
 }
 .below{
     z-index:-1;
